--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_native_splash: ^2.4.0
+  dots_indicator: ^3.0.0
+  get: ^4.6.6
+  google_fonts: ^6.2.1
+  iconsax: ^0.0.8
+
+flutter_native_splash:
+  android: true
+  ios: true
+  web: false
+  color: "#FFCC00"
+  image: "assets/images/LOGO.png"
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +71,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/icons/
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
